--- a/src/main/resources/templates/add-post.html
+++ b/src/main/resources/templates/add-post.html
@@ -20,14 +20,14 @@
                 <form action="/posts/add" method="post">
                     <div class="form-group">
                         <label>Title</label>
-                        <input type="text" id="title" name="title" class="form-control" placeholder="Title">
+                        <input type="text" id="title" name="title" class="form-control" placeholder="Title" required th:value="(${post} != null ? ${post.getTitle()} : '')">
                     </div>
                     <div class="form-group">
                         <label>Body</label>
-                        <textarea id="mytextarea" name="mytextarea">Hello, World!</textarea>
+                        <textarea id="mytextarea" name="mytextarea" th:utext="(${post} != null ? ${post.getContent()} : '')"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <a type="button" class="btn btn-primary" href="/products">Back</a>
+                    <a type="button" class="btn btn-primary" href="/posts">Back</a>
                 </form>
             </div>
         </div>
