--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,41 +2,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-4 col-xl-3">
-                <h5>About</h5>
+                <h5>За мене</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <p class="mb-0">
-                    Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
-                    impression.
+                    Студент
                 </p>
             </div>
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
-                <h5>Informations</h5>
+                <h5>Информации</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
-                    <li><a href="">Link 1</a></li>
-                    <li><a href="">Link 2</a></li>
-                    <li><a href="">Link 3</a></li>
-                    <li><a href="">Link 4</a></li>
-                </ul>
-            </div>
-
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-                <h5>Others links</h5>
-                <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
-                <ul class="list-unstyled">
-                    <li><a href="">Link 1</a></li>
-                    <li><a href="">Link 2</a></li>
-                    <li><a href="">Link 3</a></li>
-                    <li><a href="">Link 4</a></li>
+                    <li><a href="https://www.linkedin.com/in/darko-trajkovski-9a84b91a7/">LinkedIn</a></li>
+                    <li><a href="https://github.com/darkotrajkovski">GitHub</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC3FDO34dOlKpS2e9111Y0fg">YouTube Programming Course</a></li>
                 </ul>
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3">
-                <h5>Contact</h5>
+                <h5>Контакт</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
-                    <li><i class="fa fa-home mr-2"></i> My company</li>
+                    <li><i class="fa fa-home mr-2"></i> Дарко Трајковски</li>
                     <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
                     <li><i class="fa fa-phone mr-2"></i> + 33 12 14 15 16</li>
                     <li><i class="fa fa-print mr-2"></i> + 33 12 14 15 16</li>
