--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,9 @@
 <section class="jumbotron text-center" xmlns:th="http://www.thymeleaf.org">
     <div class="container">
-        <h1 class="jumbotron-heading">EMT 2021 SHOP</h1>
+        <h1 class="jumbotron-heading">ФИНКИ Блог</h1>
     </div>
+
+    <p>
+        Добредојдовте на ФИНКИ блогот. Тука можете да пишувате и истражувате секакви статии поврзани со факултетот
+    </p>
 </section>
