--- a/src/main/resources/templates/add-post.html
+++ b/src/main/resources/templates/add-post.html
@@ -10,7 +10,7 @@
 <th:block xmlns:th="http://www.thymeleaf.org">
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">FINKI Blog</h1>
+            <h1 class="jumbotron-heading">ФИНКИ Блог</h1>
         </div>
     </section>
 
